--- a/a6/index.html
+++ b/a6/index.html
@@ -13,8 +13,7 @@
 					type="radio"
 					name="switch-type"
 					value="one-key"
-					onclick="turnOnOneKey()"
-					checked>
+					onclick="turnOnOneKey()">
 				One Key
 			</label>
 			<label style="width:100px;">
@@ -22,7 +21,8 @@
 					type="radio"
 					name="switch-type"
 					value="two-key"
-					onclick="turnOnTwoKey()">
+					onclick="turnOnTwoKey()"
+					checked>
 				Two Keys
 			</label>
 		</div>
@@ -57,13 +57,169 @@
 			</div>
 		</div>
 		<div id="comments">
-			<h2>About this app</h2>
-			<p>Include information here about your app.</p>
-			<ul>
-				<li>Instructions for using the app</li>
-				<li>Test results</li>
-				<li>Anything else you have tried out</li>
-			</ul>
+			<h3>Instructions</h3>
+			<p>
+				Use the radio buttons above the calculator to choose a one-key or two-key switch control interface.
+				The one-key interface utilizes the space bar to select the currently highlighted item.
+				The two-key interface utilizes the space bar to navigate to the next item (whether this is a row or row item) and enter to select the highlighted item.
+			</p>
+			<h3>Test Results</h3>
+			<p>
+				I tested the two interfaces by using each to enter the calculations listed in the following table.
+				I ran each calculation three times on each interface.
+				In general, the two-key interface led to better performance both in terms of time and accuracy.
+			</p>
+			<table>
+				<thead>
+					<th>calculation</th>
+					<th>one-key time (seconds)</th>
+					<th>one-key errors</th>
+					<th>two-key time (seconds)</th>
+					<th>two-key errors</th>
+				</thead>
+				<tbody>
+					<tr>
+						<td>123 + 321 =</td>
+						<td>40</td>
+						<td>1</td>
+						<td>19</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>33</td>
+						<td>1</td>
+						<td>15</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>19</td>
+						<td>0</td>
+						<td>15</td>
+						<td>0</td>
+					</tr>
+					<tr id="average">
+						<td>mean</td>
+						<td>30.7</td>
+						<td>0.7</td>
+						<td>16.3</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td>7410 * 147 =</td>
+						<td>38</td>
+						<td>0</td>
+						<td>45</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>34</td>
+						<td>0</td>
+						<td>36</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>30</td>
+						<td>0</td>
+						<td>32</td>
+						<td>0</td>
+					</tr>
+					<tr id="average">
+						<td>mean</td>
+						<td>34</td>
+						<td>0</td>
+						<td>37.7</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td>753 * 951 =</td>
+						<td>93</td>
+						<td>3</td>
+						<td>35</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>35</td>
+						<td>0</td>
+						<td>27</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>94</td>
+						<td>2</td>
+						<td>23</td>
+						<td>0</td>
+					</tr>
+					<tr id="average">
+						<td>mean</td>
+						<td>74.7</td>
+						<td>1.7</td>
+						<td>28.3</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td>888 - 444 =</td>
+						<td>39</td>
+						<td>0</td>
+						<td>23</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>32</td>
+						<td>0</td>
+						<td>22</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>28</td>
+						<td>0</td>
+						<td>19</td>
+						<td>0</td>
+					</tr>
+					<tr id="average">
+						<td>mean</td>
+						<td>33</td>
+						<td>0</td>
+						<td>21.3</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td>1 + 6 * 8 - 0 * 2 =</td>
+						<td>32</td>
+						<td>0</td>
+						<td>30</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>38</td>
+						<td>0</td>
+						<td>37</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>43</td>
+						<td>0</td>
+						<td>30</td>
+						<td>0</td>
+					</tr>
+					<tr>
+						<td>mean</td>
+						<td>37.7</td>
+						<td>0</td>
+						<td>32.3</td>
+						<td>0</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 		<script src="calculator.js" type="text/javascript"></script>
