--- a/p2/hazel.html
+++ b/p2/hazel.html
@@ -9,6 +9,7 @@
     <title>Hazel</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 
   <body spellcheck="false">
@@ -16,4 +17,5 @@
   </body>
 
   <script src="hazel.js"></script>
+  <script src="voice.js"></script>
 </html>
